--- a/1-translate/style.css
+++ b/1-translate/style.css
@@ -1,7 +1,36 @@
+#root {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  --base-font-size: 10px;
+}
+html {
+  font-size: var(--base-font-size);
+}
 .good {
   font-style: normal;
 }
 
 .bad {
   font-style: normal;
+}
+p {
+  font-family: "Lora", serif;
+  word-spacing: 0.2em;
+  font-size: 1.2rem;
+}
+a {
+  text-decoration: none;
+  color: black;
+  background-color: aqua;
+  padding: 0.8rem 1rem;
+  margin: 2%;
+}
+a:hover {
+  transition: 1s;
+  box-shadow: inset 1em 6em 6em black;
+  color: aqua;
+}
+a:visited {
+  color: red;
 }
