--- a/1-translate/style.css
+++ b/1-translate/style.css
@@ -7,6 +7,24 @@
 html {
   font-size: var(--base-font-size);
 }
+body {
+  max-width: 90%;
+  margin: auto;
+  background-image: linear-gradient(#1687ed, #14375a);
+  background-image: url("./pexels-alex-qian-2304791.jpg");
+  background-position: cover;
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
+q {
+  max-width: calc(100% / 2);
+  margin: 80px auto;
+  display: block;
+  transform: scale(1.6);
+  background-color: #f3eeee;
+  border-left: 3px solid firebrick;
+  padding-left: 30px;
+}
 .good {
   font-style: normal;
 }
