--- a/1-translate/style.css
+++ b/1-translate/style.css
@@ -1,3 +1,8 @@
+/* TO DO 
+- corriger l'exo des liens
+- maybe
+*/
+
 #root {
   padding: 0;
   margin: 0;
@@ -16,6 +21,7 @@ body {
   background-repeat: no-repeat;
   background-position: bottom right;
 }
+
 q {
   max-width: calc(100% / 2);
   margin: 80px auto;
@@ -25,11 +31,12 @@ q {
   border-left: 3px solid firebrick;
   padding-left: 30px;
 }
-.good {
-  font-style: normal;
+.good,
+.bad {
+  font-weight: 400;
 }
 
-.bad {
+ {
   font-style: normal;
 }
 p {
@@ -51,4 +58,10 @@ a:hover {
 }
 a:visited {
   color: red;
+}
+.villagers {
+  border-color: yellow;
+}
+.farmer {
+  border-color: pink;
 }
