--- a/1-translate/style.css
+++ b/1-translate/style.css
@@ -15,8 +15,9 @@ html {
 body {
   max-width: 90%;
   margin: auto;
-  background-image: linear-gradient(#1687ed, #14375a);
-  background-image: url("./pexels-alex-qian-2304791.jpg");
+  background-image: linear-gradient(#1687ed, #14375a),
+    url("./pexels-alex-qian-2304791.jpg");
+  /*background-image: url("./pexels-alex-qian-2304791.jpg");*/
   background-position: cover;
   background-repeat: no-repeat;
   background-position: bottom right;
@@ -106,4 +107,17 @@ tr:nth-child(4) td:nth-child(2) {
 }
 .bold {
   font-weight: 700;
+}
+.gallery {
+  display: flex;
+  flex-direction: row;
+  gap: 10vw;
+}
+.gallery img {
+  max-width: 30vw;
+  flex: 1;
+}
+.gallery figcaption {
+  flex: 3;
+  text-align: left;
 }
